--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@ html {
     padding: 0;
 }
 
+body {
+    padding: 0;
+    margin: 0;
+}
+
 h1 {
     background-color: gray;
     padding: 5px;
+    margin: 0;
 }
