--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
     background-color: gray;
-    padding: 10px;
+    padding: 10px 25px;
     margin: 0;
     font-size: 50px;
     color: white;
