--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1 {
-    background-color: gray;
+    background-color: #1f1f1f;
     padding: 25px 50px;
     margin: 0;
     font-size: 35px;
