--- a/style.css
+++ b/style.css
@@ -8,10 +8,16 @@ body {
     margin: 0;
 }
 
+header {
+    display: flex;
+    justify-content: flex-end;
+}
+
 h1 {
     background-color: #1f1f1f;
     padding: 25px 50px;
     margin: 0;
     font-size: 35px;
     color: white;
+    margin-right: auto;
 }
