--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 header {
     display: flex;
     justify-content: flex-end;
+    background-color: #1f1f1f;
+    width: 100%;
 }
 
 h1 {
-    background-color: #1f1f1f;
     padding: 25px 50px;
     margin: 0;
     font-size: 35px;
