--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 header a {
-    padding: 5px;
+    padding: 5px 10px;
     background-color: #777777;
     height: auto;
     font-size: 25px;
