--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Red Hat Display"
 }
 
 body {
