--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ header img {
     font-weight: 400;
 }
 
-#guides {
+#kb {
     background-image: linear-gradient(0deg, rgba(126,122,195,1) 0%, rgba(132,132,237,1) 10%, rgba(0,212,255,1) 100%);
 }
 
@@ -155,13 +155,14 @@ a {
     flex-direction: row;
 }
 
-#guidelist {
+.guidelist {
     display: flex;
     flex-direction: column;
+    margin-bottom: 100px;
 }
 
 .bar {
     color: #dddddd;
-    margin: 25px 100px;
-    font-size: 40px;
+    margin: 25px 100px 50px 100px;
+    font-size: 50px;
 }
