--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ header img {
 #intro p {
     text-align: center;
     font-size: 25px;
+    padding: 0 25px;
 }
 
 .main {
@@ -84,7 +85,7 @@ header img {
     display: flex;
     flex-direction: row;
     height: auto;
-    padding: 20px 100px;
+    padding: 20px 75px;
     justify-content: center;
     animation: float 1.5s ease;
 }
@@ -137,6 +138,7 @@ a {
     height: auto;
     background-color: #1f1f1f;
     color: white;
+    padding: 50px;
 }
 
 @keyframes float {
@@ -165,4 +167,181 @@ a {
     color: #dddddd;
     margin: 25px 100px 50px 100px;
     font-size: 50px;
+}
+
+#dlandcommu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center
+}
+
+@media screen and (max-width: 1620px) {
+    .selections {
+        flex-direction: column;
+    }
+
+    .selections a {
+        margin: 30px;
+    }
+
+    .selections {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+
+@media screen and (max-width: 1420px) {
+    header img {
+        height: 30px;
+    }
+    
+    header {
+        padding: 30px 50px;
+    }
+
+    .nav {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    #dlandcommu {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 1220px) {
+    .nav {
+        display: none;
+    }
+
+    .title {
+        font-size: 100px;
+    }
+
+    .bar {
+        font-size: 30px;
+    }
+
+    .selguide h2 {
+        font-size: 25px;
+    }
+
+    .selections a {
+        padding: 25px 50px;
+    }
+
+    .title {
+        padding: 50px 0;
+    }
+
+    .bar {
+        margin-bottom: 25px;
+    }
+
+    header img {
+        height: 25px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .title {
+        font-size: 75px;
+    }
+
+    .bar {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    header img {
+        height: 25px;
+    }
+
+    .selections a h1 {
+        font-size: 50px;
+        font-weight: 400;
+    }
+
+    .selections {
+        padding: 0 35px;
+    }
+
+    #intro h1 {
+        font-size: 75px;
+    }
+
+    #intro p {
+        font-size:20px;
+    }
+
+    #intro {
+        height: auto;
+    }
+
+    .title {
+        font-size: 45px;
+        margin: 0 30px;
+        text-align: center;
+        padding: 20px 0;
+        padding-top: 40px;
+    }
+
+    .bar {
+        font-size: 20px;
+        margin: 25px 50px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .selguide h2 {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    header img {
+        height: 20px;
+    }
+
+    .head {
+        height: auto;
+    }
+
+    .main {
+        margin-top: 75px;
+    }
+
+    #intro h1 {
+        font-size: 50px;
+    }
+
+    #intro p {
+        font-size: 17.5px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    header img {
+        height: 17.5px;
+    }
+
+    header {
+        padding: 25px;
+    }
+
+    .selections a h1 {
+        font-size: 35px;
+        margin: 0;
+    }
+
+    .selections a p {
+        font-size: 15px;
+    }
+
+    .selections a {
+        padding: 25px;
+    }
 }
